[tool.poetry]
name = "howblox-lib"
version = "0.0.1"
description = "Shared utils used for Python codebase of howblox."
authors = ["Howblox"]
readme = "README.md"
repository = "https://github.com/howblox/howblox-lib"
packages = [{include = "howblox_lib"}]

[tool.poetry.dependencies]
python = "<3.13, >=3.12"
attrs = "^23.2.0"
hikari = "<3.0.0, >=2.0.0.dev118"
motor = "^3.3.2"
redis = "^5.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.2"
python-dateutil = "^2.8.2"
pydantic = "^2.6.0"
discord-py = "^2.3.2"
sentry-sdk = "^1.40.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"